<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roompersistance.shais.roompersistance.QueryActivity">
    <TextView
        android:id="@+id/txv_title_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_desired_query"
        android:gravity="center"
        android:textSize="22sp"/>
    <Button
        android:id="@+id/btn_all_users"
        android:layout_below="@+id/txv_title_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_users"
        android:onClick="showAllUsers"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_all_users"
        android:layout_below="@+id/btn_all_users"
        android:layout_width="match_parent"
        android:layout_height="250dp" />
    <Button
        android:id="@+id/btn_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_user"
        android:layout_below="@+id/list_all_users"
        android:onClick="fetchUser"/>
    <TextView
        android:id="@+id/txv_user_info"
        android:layout_below="@+id/btn_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        android:layout_alignParentBottom="true"
        android:onClick="deleteAllUsers"/>


</RelativeLayout>
